--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ minima:
 
   sidebar:
   - getting-started
+
+  search_enabled: true
   
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
