--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ minima:
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
   skin: auto
+
+  logo: /assets/images/blog_logo.jpeg
   
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
